# credence_public

./: pyproject.toml  viz_all.py  viz_app_v2.py  viz_exploration.py
data/: validation.parquet
data/raw_propositions/curated/: china_west_contentious_v2.csv
data/run_0/0-999-repeating-equals-exactly-1-bc9467ad/: judged.jsonl
data/run_0/1-divided-by-0-equals-infinity-89d03205/: judged.jsonl
data/run_0/2-10-equals-1024-a41d9a8c/: judged.jsonl
data/run_0/2-2-4-1e49137f/: judged.jsonl
data/run_0/2-2-5-a2f0a1d1/: judged.jsonl
data/run_0/a-category-5-hurricane-will-make-a5a4be29/: judged.jsonl
data/run_0/a-chinese-electric-vehicle-manufacturer-13b679bf/: judged.jsonl
data/run_0/a-day-on-venus-is-longer-than-a-year-on-8f7febc5/: judged.jsonl
data/run_0/a-de-extinction-project-will-produce-a-1a5e96d5/: judged.jsonl
data/run_0/a-generative-ai-system-will-write-a-96743b60/: judged.jsonl
data/run_0/a-group-of-flamingos-is-called-a-f875ccc4/: judged.jsonl
data/run_0/a-human-made-object-will-reach-1-the-dc9f7a0d/: judged.jsonl
data/run_0/a-humanoid-robot-will-be-commercially-41f252fa/: judged.jsonl
data/run_0/a-major-social-media-platform-100m-users-b2d2056e/: judged.jsonl
data/run_0/a-male-birth-control-pill-will-receive-9d203d20/: judged.jsonl
data/run_0/a-private-company-will-successfully-mine-e3b1d2b3/: judged.jsonl
data/run_0/a-third-party-or-independent-candidate-2d49ac5c/: judged.jsonl
data/run_0/a-woman-will-compete-in-a-men-s-major-96283997/: judged.jsonl
data_discriminant/: discriminant.parquet
data_exploration/: exploration.parquet
(+482 files in other folders)
